@@ -4,6 +4,7 @@
 import lxml.objectify
 import zeit.cms.content.interfaces
 import zeit.content.video.testing
+import unittest2 as unittest
 
 
 class TestVideo(zeit.content.video.testing.TestCase):
@@ -60,7 +61,7 @@ class TestReference(zeit.content.video.testing.TestCase):
         self.update(self.node)
         self.assertEqual(
             'http://thumbnailurl', self.node['thumbnail'].get('src'))
-
+    
     def test_nodes_should_be_removed_from_reference(self):
         self.create_video(
             video_still='http://stillurl', thumbnail='http://thumbnailurl')
@@ -72,3 +73,63 @@ class TestReference(zeit.content.video.testing.TestCase):
         self.update(self.node)
         self.assertRaises(AttributeError, lambda: self.node['video-still'])
         self.assertRaises(AttributeError, lambda: self.node['thumbnail'])
+
+
+class TestRenditionsProperty(unittest.TestCase):
+    
+    def test_element_factory_should_return_rendition(self):
+        import mock
+        from zeit.content.video.video import RenditionsProperty
+        from zeit.content.video.video import VideoRendition        
+        prop = RenditionsProperty(".foo")
+        
+        node = lxml.objectify.XML("<rendition url='foo' frame_width='100' />")  
+        
+        rendition = prop._element_factory(node, mock.sentinel.tree)
+        self.assertEqual(node.get('url'), rendition.url)
+        self.assertEqual(int(node.get('frame_width')), rendition.frame_width)
+
+    def test_node_factory_should_return_node(self):
+        from zeit.content.video.video import RenditionsProperty
+        import mock
+        prop = RenditionsProperty(".foo")
+        rendition = mock.Mock()
+        rendition.url = 'foo'
+        rendition.frame_width = 100
+        node = prop._node_factory(rendition, mock.sentinel.tree)
+        self.assertEqual('rendition', node.tag)
+        self.assertEqual('foo', node.get('url'))
+        self.assertEqual(100, int(node.get('frame_width')))
+
+    def test_video_should_store_renditions(self):
+        from zeit.content.video.video import Video
+        from zeit.content.video.video import VideoRendition        
+        
+        video = Video()
+        rendition = VideoRendition()
+        rendition.url = 'foo'
+        rendition.frame_width = 100
+        rendition2 = VideoRendition()
+        rendition2.url = 'baa'
+        rendition2.frame_width = 200
+        video.renditions = (rendition,rendition2)
+
+        xmlstr = lxml.etree.tostring(video.xml.head.renditions, pretty_print=True)
+        self.assertEqual('<renditions xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">\n  <rendition url="foo" frame_width="100"/>\n  <rendition url="baa" frame_width="200"/>\n</renditions>\n',xmlstr)
+
+    def test_video_should_load_renditions(self):
+        from zeit.content.video.video import Video
+        from zeit.content.video.video import VideoRendition        
+        
+        node = lxml.objectify.XML('<renditions xmlns:py="http://codespeak.net/lxml/objectify/pytype" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">\n  <rendition url="foo" frame_width="100"/>\n  <rendition url="baa" frame_width="200"/>\n</renditions>\n')
+        
+        video = Video()
+        video.xml.head.renditions = node
+        self.assertEqual('foo', video.renditions[0].url)
+        self.assertEqual(100, video.renditions[0].frame_width)
+
+
+
+
+
+
